updated dark mode colors and fixed hydration error

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,13 +5,13 @@
   @layer base {
     :root {
       --background: 0 0% 100%;
-      --foreground: 240 10% 3.9%;
+      --foreground: 209, 23%, 22%;
 
       --card: 0 0% 100%;
-      --card-foreground: 240 10% 3.9%;
+      --card-foreground: 209, 23%, 22%;
 
       --popover: 0 0% 100%;
-      --popover-foreground: 240 10% 3.9%;
+      --popover-foreground: 209, 23%, 22%;
 
       --primary: 200, 15%, 8%;
       --primary-foreground: 0 0% 98%;
@@ -30,7 +30,7 @@
 
       --border: 240 5.9% 90%;
       --input: 240 5.9% 90%;
-      --ring: 240 10% 3.9%;
+      --ring: 209, 23%, 22%;
 
       --radius: 0.5rem;
     }
@@ -39,10 +39,10 @@
       --background: 207, 26%, 17%;
       --foreground: 0 0% 98%;
 
-      --card: 240 10% 3.9%;
+      --card: 209, 23%, 22%;
       --card-foreground: 0 0% 98%;
 
-      --popover: 240 10% 3.9%;
+      --popover: 209, 23%, 22%;
       --popover-foreground: 0 0% 98%;
 
       --primary: 0 0% 98%;
